--- a/src/components/Contenido2.astro
+++ b/src/components/Contenido2.astro
@@ -2,34 +2,32 @@
     <div class="container">
       <div class="row container contenedor-information">
         <div class="col-md-12 col-lg-7">
-         <img src="public/MARTILLOPETROLERO.gif" class="balancin" alt="" />
+         <img src="GIFELECTRONICA.gif" class="balancin" alt="" />
         </div>
   
         <div class="col-md-12 col-lg-5 container-informacion">
-          <h2>Departamentalización</h2>
+          <h2>"Optimizamos recursos y talento humano para excelencia."</h2>
           <p class="text-muted parraf-title">
-            la departamentalización juega un papel fundamental en la organización y el desempeño general de la empresa. Al dividir las funciones y responsabilidades en diferentes departamentos específicos, podemos optimizar la eficiencia operativa, promover la especialización del personal y mejorar la coordinación entre equipos.
+            En Prestaservis, creemos que la combinación de un equipo humano competente y recursos técnicos de primer nivel es la clave para el éxito. Nos esforzamos por mantenernos a la vanguardia de la tecnología y la innovación para garantizar la máxima satisfacción del cliente en cada proyecto que emprendemos.
           </p>
           <div class="container">
             <div class="contenedor-card">
               <div class="container-img">
-                <img class="img-icon" src="/gerencia.png" alt="" />
+                <img class="img-icon" src="inversion.png" alt="" />
               </div>
               <div class="container contenedor-texto">
-                <h4>Direccion gerencial
+                <h4>Invercion Continua y Crecimiento.
                 </h4>
-                <p class="p-icon">En Prestaservis, reconocemos la importancia crucial de una gerencia efectiva en el éxito y el rendimiento general de nuestra empresa. Nuestra gerencia desempeña un papel fundamental en la planificación estratégica, la toma de decisiones y la coordinación de todas las operaciones para garantizar la eficiencia y la excelencia en cada proyecto que emprendemos.
-
-                  La gerencia de Prestaservis está compuesta por un equipo de líderes altamente capacitados y experimentados en el campo de la construcción y la ingeniería. Estos profesionales aportan una combinación única de habilidades técnicas, conocimientos empresariales y visión estratégica que nos permite mantenernos a la vanguardia de la industria y superar constantemente las expectativas de nuestros clientes.</p>
+                <p class="p-icon">Nuestro compromiso con la excelencia se refleja en la inversión continua en maquinaria y equipos de última generación. Desde equipos de construcción hasta instrumentos de precisión, contamos con una amplia gama de recursos técnicos para abordar una variedad de proyectos con eficiencia y precisión.</p>
               </div>
             </div>
             <div class="contenedor-card">
               <div class="container-img">
-                <img class="img-icon" src="/calidad.png" alt="" />
+                <img class="img-icon" src="time.png" alt="" />
               </div>
               <div class="container contenedor-texto">
-                <h4>Calidad y Seguridad Operacional</h4>
-                <p class="p-icon">En Prestaservis, estamos comprometidos con la calidad y la seguridad en todas nuestras operaciones. Nuestro equipo humano altamente capacitado en áreas clave como aseguramiento de la calidad y seguridad industrial nos permite garantizar la excelencia en cada proyecto que emprendemos.</p>
+                <h4>Gestion del tiempo, Resultados Sostenibles</h4>
+                <p class="p-icon">La gerencia de Prestaservis desempeña un papel vital en la conducción de nuestra empresa hacia el éxito. Su liderazgo visionario, su enfoque en la excelencia y su compromiso con la innovación son fundamentales para nuestra capacidad para ofrecer resultados excepcionales y crear valor para todos nuestros stakeholders.</p>
               </div>
             </div>
           </div>
@@ -42,8 +40,8 @@
   <style>
     
     .balancin{
-      width: 1200px !important;
-      height: 1200px !important;
+      width: 800px !important;
+      height: 800px !important;
       margin-top: -20px !important;
       margin-left: -250px !important;
     }
@@ -119,8 +117,5 @@
       height: 40px !important;
       width: 40px !important;
      }
-    }
-    section{
-      padding: 5%;
     }
   </style>
