--- a/src/components/aliadosc.astro
+++ b/src/components/aliadosc.astro
@@ -8,67 +8,67 @@
         <div class="row contenedor-items">
                 <div class="col-md-3">
                     <div class="container">
-                        <img src="public/ALIADOS/INDUNORCA.png" alt="">
+                        <img src="/ALIADOS/INDUNORCA.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="container">
-                        <img src="public/ALIADOS/ICM.png" alt="">
+                        <img src="/ALIADOS/ICM.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="container">
-                        <img src="public/ALIADOS/GLOBAL.png" alt="">
+                        <img src="/ALIADOS/GLOBAL.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="container">
-                        <img src="public/ALIADOS/CETEL.png" alt="">
+                        <img src="/ALIADOS/CETEL.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="container">
-                        <img src="public/ALIADOS/INELECTRA.png" alt="">
+                        <img src="/ALIADOS/INELECTRA.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="container">
-                        <img src="public/ALIADOS/INSERVEN.png" alt="">
+                        <img src="/ALIADOS/INSERVEN.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="container">
-                        <img src="public/ALIADOS/METOR.png" alt="">
+                        <img src="/ALIADOS/METOR.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="container">
-                        <img src="public/ALIADOS/MMO.png" alt="">
+                        <img src="/ALIADOS/MMO.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="container">
-                        <img src="public/ALIADOS/RAFAY.png" alt="">
+                        <img src="/ALIADOS/RAFAY.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="container">
-                        <img src="public/ALIADOS/ONEID.png" alt="">
+                        <img src="/ALIADOS/ONEID.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="container">
-                        <img src="public/ALIADOS/REC.png" alt="">
+                        <img src="/ALIADOS/REC.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="container">
-                        <img src="public/ALIADOS/SUPERMETAN.png" alt="">
+                        <img src="/ALIADOS/SUPERMETAN.png" alt="">
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-12">
                     <div class="container">
-                        <img src="public/ALIADOS/WISON.png" alt="">
+                        <img src="/ALIADOS/WISON.png" alt="">
                     </div>
                 </div>
         </div>
@@ -108,7 +108,7 @@
     img:hover{
         transform: translateY(-15px);
         transform: scale(1.2);
-        box-shadow: 0 15px 30px rgba(0,0,0,.1);
+        box-shadow: 0 15px 30px rgba(231, 7, 7, 0.1);
        
     }
     .contenedor-principal{
@@ -124,7 +124,6 @@
         margin: 0px;
     }
     section{
-        border-bottom: 2px solid rgb(0, 0, 0);
-        padding-bottom: 200px;
+        padding-bottom: 15%;
     }
 </style>
