--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/BlogPost.astro';
 import 'bootstrap/dist/css/bootstrap.css'
-import Contenido from '../components/Contenido.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <Layout
@@ -20,6 +20,16 @@ import Contenido from '../components/Contenido.astro';
 			</strong>
 		</em>
 	</p>
+	<h2>
+		Historia y Trayectoria
+	</h2>
+		<p><br>
+			<em>
+				<strong>
+					Prestaservis tiene sus raíces en una visión audaz y un compromiso inquebrantable con la excelencia. Fundada el 18 de febrero de 2010 por Jeison Alfredo Marín La Rosa, la Asociación Cooperativa Prestaservis, R.L. fue concebida para atender las necesidades de la industria de la construcción en proyectos de ingeniería civil. Desde entonces, hemos crecido y evolucionado para convertirnos en una empresa líder en el mercado, gracias al esfuerzo, la iniciativa y la filosofía de reinversión de dividendos de nuestros fundadores.
+				</strong>
+			</em>
+		</p>
 	<h2>
 		Misión
 	</h2>
@@ -48,8 +58,6 @@ import Contenido from '../components/Contenido.astro';
 <strong>Compromiso:</strong> Estamos comprometidos con la satisfacción de nuestros clientes, cumpliendo con sus expectativas y superando sus necesidades.
 	</p>
 
-	
-
 	<p class="text-center">
 	<em><strong>Contamos con un equipo altamente capacitado en áreas clave como aseguramiento de la calidad, 
 		seguridad industrial, producción en serie, servicios al cliente, planificación y control, y logística. 
@@ -58,6 +66,6 @@ import Contenido from '../components/Contenido.astro';
 		
 	</em>
 	</p>
-	
 </Layout>
-<Contenido/>
+
+<Footer />
