--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -6,7 +6,7 @@ import Footer from '../../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
-
+import CardService from '../../components/CardService.astro';
 const posts = (await getCollection('blog')).sort(
 	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
 );
@@ -92,23 +92,73 @@ const posts = (await getCollection('blog')).sort(
 		<Header />
 		<main>
 			<section>
-				<ul>
-					{
-						posts.map((post) => (
-							<li>
-								
-									<img width={720} height={360} src={post.data.heroImage} alt="" />
-									<h4 class="title">{post.data.title}</h4>
-									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
-									</p>
-								
-							</li>
-						))
-					}
-				</ul>
+				<li>
+					<div class="titulo">
+						<img width={1000} height={360} src="public/serv/servicios (1).png" alt="" />
+						<h4 class="title text-center">
+							Proyectos Ejecutados Por PRESTASERVIS RL
+						</h4>
+						<p class="date">
+							
+						</p></div>
+						
+						<div class="container">
+							<div class="row">
+							  <div class="col-md6">
+								<CardService
+								date=""
+								img="/SRC/proyectos (1).png"
+								parraf="Mantenimiento de valvulas de seguridad de control, Punta de mata Edo. Monagas"
+								height={800}
+								width={1200}
+								title="Mantenimiento de válvulas de Seguridad y Válvulas de control"
+							  />
+							  </div>
+							  <div class="col-md6">
+								<CardService
+								date=""
+								img="/SRC/proyectos (2).png"
+								parraf="Empalmes y Certificación de fibra optica en  Sinovensa 2022"
+								height={350}
+								width={800}
+								title="Empalmes y Certificación de fibra optica"
+							  />
+							  </div>
+							  <div class="col-md6">
+								<CardService
+								date=""
+								img="/SRC/proyectos (3).png"
+								parraf="Mantenimiento de Valvulas de Seguridad PSV Petrocedeño-RAFAY Abril 2023"
+								height={350}
+								width={800}
+								title="Mantenimiento de Valvulas de Seguridad PSV"
+							  />
+							  </div>
+							  <div class="col-md6">
+								<CardService
+								date=""
+								img="/SRC/proyectos (4).png"
+								parraf="Mantenimiento de valvulas de tapon para la linea reguladora de gas para turbogenerador TITAN. 2021. Fabricacion de Tuberia para linea reguladora de gas para turbogenerador TITAN Refineria Puerto La Cruz. Sandblasting y pintura de tuberia para linea dreguladora de gas para turbo generador TITAN"
+								height={350}
+								width={800}
+								title="Mantenimiento de válvulas, Fabricacion de tuberias, SandBlasting y pintura."
+							  />
+							  </div>
+							 
+							</div>
+							
+						  </div>
+					
+				</li>
+			
+		
 			</section>
 		</main>
 		<Footer />
 	</body>
+	<style>
+		.titulo{
+			padding-bottom: 6%;
+		}
+	</style>
 </html>
