--- a/src/pages/service/index.astro
+++ b/src/pages/service/index.astro
@@ -93,13 +93,24 @@ import FormattedDate from '../../components/FormattedDate.astro';
 				<ul>
 
 							<li>
-							
-									<img width={720} height={360} src={} alt="" />
-									<h4 class="title">Titulo</h4>
+								<div class="titulo">
+									<img width={720} height={360} src="public/serv/servicios (1).png" alt="" />
+									<h4 class="title">Servicios que ofrece PrestaServis RL</h4>
 									<p class="date">
 										
-									</p>
-								
+									</p></div>
+									
+									<img width={720} height={360} src="public/serv/servicios (2).png" alt="" />
+									<img width={720} height={360} src="public/serv/servicios (4).png" alt="" />
+									<img width={720} height={360} src="public/serv/servicios (5).png" alt="" />
+									<img width={720} height={360} src="public/serv/servicios (6).png" alt="" />
+									<img width={720} height={360} src="public/serv/servicios (7).png" alt="" />
+									<img width={720} height={360} src="public/serv/servicios (8).png" alt="" />
+									<img width={720} height={360} src="public/serv/servicios (9).png" alt="" />
+									<img width={720} height={360} src="public/serv/servicios (10).png" alt="" />
+									<img width={720} height={360} src="public/serv/servicios (11).png" alt="" />
+									<img width={720} height={360} src="public/serv/servicios (12).png" alt="" />
+									<img width={720} height={360} src="public/serv/servicios (13).png" alt="" />
 							</li>
 						
 					
@@ -108,4 +119,9 @@ import FormattedDate from '../../components/FormattedDate.astro';
 		</main>
 		<Footer />
 	</body>
+	<style>
+		.titulo{
+			padding-bottom: 15%;
+		}
+	</style>
 </html>
