--- a/src/components/ContactCards.astro
+++ b/src/components/ContactCards.astro
@@ -7,7 +7,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Si deseas formar parte de nuestro equipo de trabajo contacte con nosotros y nos encargaremos de atenderte en la brevedad posible</h5>
                   <p class="card-text">En PrestaServis estamos comprometidos con la Responsabilidad y deseamos que formes parte de nuestro equipo para seguir expandiendo nuestras capacidades</p>
-                  <a href="#" class="btn btn-primary">Click aqui para contactar con nosotros</a>
+                  <a href="mailto:correoprestaservis@correo.com?Subject=ASUNTO%EMAIL" class="btn btn-primary">Click aqui para contactar con nosotros</a>
                 </div>
               </div>
         </div>
@@ -17,7 +17,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Contactate directamente con nuestro equipo acargo del departamento de calidad</h5>
                   <p class="card-text">Nuestro equipo esta conformado por expertos en la materia de gestion de la calidad con amplia experiencia dentro de la materia y una preparacion solida, para mas informacion contacte via e-mailcon nosotros</p>
-                  <a href="mailto:elcorreoquequieres@correo.com?Subject=Aquí%20el%20asunto%20del%20mail" class="btn btn-primary">Click aqui para contactar con nosotros</a>
+                  <a href="mailto:correoprestaservis@correo.com?Subject=ASUNTO%EMAIL" class="btn btn-primary">Click aqui para contactar con nosotros</a>
                 </div>
               </div>
         </div> 
@@ -27,7 +27,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Contacta directamente con la gerencia via e-mail, te recomendamos contactar directamente al departameento de tu interes</h5>
                   <p class="card-text">Nuestra estructura departamental esta diseñada para atender a tus necesidades de forma eficaz, sera un placer poder contactarnos con usted.</p>
-                  <a href="#" class="btn btn-primary">click aqui para contactarnos</a>
+                  <a href="mailto:correoprestaservis@correo.com?Subject=ASUNTO%EMAIL" class="btn btn-primary">click aqui para contactarnos</a>
                 </div>
               </div>
         </div>
