--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -73,7 +73,7 @@ import { SITE_TITLE } from '../consts';
 	header {
 		margin: 0;
 		padding: 0 0;
-		background: white;
+		background: white !important;
 		box-shadow: 0 2px 8px rgba(var(--black), 5%);
 	}
 	h2 {
@@ -110,9 +110,12 @@ import { SITE_TITLE } from '../consts';
 		}
 	}
 	.bg-image{
-		height: 50vh;
+		height: 35vh;
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
+	}
+	h1, h5{
+		color: white !important;
 	}
 </style>
