--- a/src/components/aliadosc.astro
+++ b/src/components/aliadosc.astro
@@ -1,129 +1,25 @@
+---
+import Slider from "./Slider"
+---
 
 <section>
+  <h2 class="text-center">
+    Referencias y Aliados Comerciales de Nuestra Organización
+  </h2>
+  <br />
 
-    <h2 class="text-center">Referencias y Aliados Comerciales de Nuestra Organización</h2>
-    <br>
-    <div class="contenedor-principal">
+  
+  
+   <div class="contenedor-principal">
+   
 
-        <div class="row contenedor-items">
-                <div class="col-md-3">
-                    <div class="container">
-                        <img src="/ALIADOS/INDUNORCA.png" alt="">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="container">
-                        <img src="/ALIADOS/ICM.png" alt="">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="container">
-                        <img src="/ALIADOS/GLOBAL.png" alt="">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="container">
-                        <img src="/ALIADOS/CETEL.png" alt="">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="container">
-                        <img src="/ALIADOS/INELECTRA.png" alt="">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="container">
-                        <img src="/ALIADOS/INSERVEN.png" alt="">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="container">
-                        <img src="/ALIADOS/METOR.png" alt="">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="container">
-                        <img src="/ALIADOS/MMO.png" alt="">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="container">
-                        <img src="/ALIADOS/RAFAY.png" alt="">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="container">
-                        <img src="/ALIADOS/ONEID.png" alt="">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="container">
-                        <img src="/ALIADOS/REC.png" alt="">
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="container">
-                        <img src="/ALIADOS/SUPERMETAN.png" alt="">
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <div class="container">
-                        <img src="/ALIADOS/WISON.png" alt="">
-                    </div>
-                </div>
-        </div>
-      
-        
-      
+    <Slider client:load/>
+  </div>
 
-      
-      
-       
-       
-     
-      
-       
-      
-      
-        
+  <style>
+   
+    section {
+      padding-bottom: 15%;
+    }
+  </style>
 </section>
-
-
-<style>
-    .contenedor-items{
-      
-        
-        margin: 0px;
-        width: 100%;
-        justify-items: center ;
-        display: flex;
-        align-items: center;
-        padding: 25px;
-        text-align:center;
-       
-    }
-    img{
-        transition: all 0.8s;
-    }
-    img:hover{
-        transform: translateY(-15px);
-        transform: scale(1.2);
-        box-shadow: 0 15px 30px rgba(231, 7, 7, 0.1);
-       
-    }
-    .contenedor-principal{
-        height: 25dvh;
-        background-color: #ffff;
-       
-    }
-    img{
-        padding-top: 10px;
-        width: 150px;
-        height: 100px;
-        margin: 0 auto;
-        margin: 0px;
-    }
-    section{
-        padding-bottom: 15%;
-    }
-</style>
