--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -171,43 +171,39 @@ import Contenido2 from '../components/Contenido2.astro';
 
       <div class="container">
         <div class="row">
-          <div class="col-md6">
+          <div class="col-md-6 mt-2">
             <CardService
             date=""
             img="/SRC/proyectos (1).png"
             parraf="Mantenimiento de valvulas de seguridad de control, Punta de mata Edo. Monagas"
-            height={350}
-            width={730}
+            
             title="Mantenimiento de válvulas de Seguridad y Válvulas de control"
           />
           </div>
-          <div class="col-md6">
+          <div class="col-md-6 mt-2">
             <CardService
             date=""
             img="/SRC/proyectos (2).png"
             parraf="Empalmes y Certificación de fibra optica en  Sinovensa 2022"
-            height={350}
-            width={730}
+            
             title="Empalmes y Certificación de fibra optica"
           />
           </div>
-          <div class="col-md6">
+          <div class="col-md-6 mt-2">
             <CardService
             date=""
             img="/SRC/proyectos (3).png"
             parraf="Mantenimiento de Valvulas de Seguridad PSV Petrocedeño-RAFAY Abril 2023"
-            height={350}
-            width={730}
+          
             title="Mantenimiento de Valvulas de Seguridad PSV"
           />
           </div>
-          <div class="col-md6">
+          <div class="col-md-6 mt-2">
             <CardService
             date=""
             img="/SRC/proyectos (4).png"
             parraf="Mantenimiento de valvulas de tapon para la linea reguladora de gas para turbogenerador TITAN. 2021. Fabricacion de Tuberia para linea reguladora de gas para turbogenerador TITAN Refineria Puerto La Cruz. Sandblasting y pintura de tuberia para linea dreguladora de gas para turbo generador TITAN"
-            height={350}
-            width={730}
+          
             title="Mantenimiento de válvulas, Fabricacion de tuberias, SandBlasting y pintura."
           />
           </div>
