--- a/src/components/Contenido.astro
+++ b/src/components/Contenido.astro
@@ -1,16 +1,16 @@
 <section class="mt-5">
-    <div class="container">
-      <div class="row container contenedor-information">
-        <div class="col-md-12 col-lg-7">
+    <div class="container-fluid">
+      <div class="row container-fluid contenedor-information">
+        <div class="col-md-12 col-lg-4">
          <img src="public/MARTILLOPETROLERO.gif" class="balancin" alt="" />
         </div>
   
-        <div class="col-md-12 col-lg-5 container-informacion">
+        <div class="col-md-12 col-lg-8 container-informacion">
           <h2>Departamentalización</h2>
           <p class="text-muted parraf-title">
             la departamentalización juega un papel fundamental en la organización y el desempeño general de la empresa. Al dividir las funciones y responsabilidades en diferentes departamentos específicos, podemos optimizar la eficiencia operativa, promover la especialización del personal y mejorar la coordinación entre equipos.
           </p>
-          <div class="container">
+          <div class="container-fluid">
             <div class="contenedor-card">
               <div class="container-img">
                 <img class="img-icon" src="/gerencia.png" alt="" />
@@ -42,10 +42,15 @@
   <style>
     
     .balancin{
-      width: 1200px !important;
-      height: 1200px !important;
-      margin-top: -20px !important;
-      margin-left: -250px !important;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      border-radius: 25px;
+      width: 100%;
+      display: block;
+      object-fit: cover;
     }
     button {
       background-color: #3e7edd !important;
